--- a/res/style.css
+++ b/res/style.css
@@ -60,3 +60,22 @@ h1 {
 	right: 0;
 	text-align: center;
 }
+
+/* Body Styles */
+#show_options, #show_notes {
+	width: 50%;
+	display: inline-block;
+	vertical-align: text-top;
+}
+#show_notes > p {
+	margin: 0;
+}
+#show_notes_table th:nth-child(1) {
+	width: 10%;
+}
+#show_notes_table th:nth-child(2) {
+	width: 80%;
+}
+#show_notes_table th:nth-child(3) {
+	width: 10%;
+}
