--- a/res/style.css
+++ b/res/style.css
@@ -9,14 +9,26 @@
  *	Color scheme courtesy of http://www.colorschemer.com/schemes/viewscheme.php?id=10323
  */
 
-/* Overall Styles */
 /* Creating the font (local file, not pre-loaded font. */
 @font-face {
 	font-family: SSP;
 	src: url(font/SourceSansPro-ExtraLight.otf);
 }
+@font-face {	/* Too bold - not in use currently but may add use for it */
+	font-family: SSPBold;
+	src: url(font/SourceSansPro-Bold.otf);
+}
+@font-face {
+	font-family: SSPSBold;
+	src: url(font/SourceSansPro-Semibold.otf);
+}
+
+/* Overall Styles */
 h1, h3 {
 	color: #0490A9;
+}
+h3, th {
+	font-family: SSPSBold;
 }
 head, html {
 	font-family: SSP;
@@ -33,7 +45,6 @@ hr {
 th, td {
 	padding: 10px 5px;
 }
-
 /* Top styles */
 h1 {
 	font-size: 75px;
